feat: 实现KV缓存系统及文档重构
📦 缓存系统:
- ✅ 新增完整的KV抽象层架构(KVAdapter接口)
- ✅ 实现Deno KV适配器(完全功能)
- ✅ 添加缓存管理器(CacheManager)支持GET/POST请求
- ✅ 实现基于SHA-256的参数哈希缓存键生成
- ✅ 支持缓存过期时间与Storage URL同步
- ✅ 添加缓存配置项(CACHE_ENABLED/CACHE_KV_TYPE)
- 🚧 预留Vercel/Cloudflare KV适配器接口

⚙️ 配置增强:
- ✅ 新增缓存配置选项到三级配置系统
- ✅ URL过期时间调整为3天(提升缓存效率)
- ✅ 完善.env.example缓存配置说明

📚 文档重构:
- ✅ 重构README.md(简化为用户导向,~200行→~100行)
- ✅ 新增docs/API.md(完整API文档,17种错误码)
- ✅ 新增docs/DEPLOYMENT.md(多平台部署指南)
- ✅ 新增docs/DEVELOPMENT.md(开发者文档)
- ✅ 重构docs/technical-design.md(架构导向)
- ✅ 移除docs/implementation.md重复内容
- ✅ 优化缓存流程时序图
- ✅ 消除文档间冗余,建立清晰的文档分工

🏗️ 架构优化:
- ✅ 实现工厂模式KV适配器管理
- ✅ 添加缓存命中302重定向机制
- ✅ 完善错误处理(新增CACHE_ERROR)
- ✅ 支持优雅降级(缓存失败时正常运行)

当前缓存支持状态:
- ✅ Deno Deploy: 完整KV缓存支持
- ❌ Vercel/Cloudflare: 需设置CACHE_ENABLED=false

--- a/.env.example
+++ b/.env.example
@@ -45,6 +45,21 @@ DEFAULT_RETURN_TYPE=binary
 DEFAULT_URL_EXPIRY=3600
 
 # ==========================================
+# 缓存配置
+# ==========================================
+
+# 是否启用缓存 (true/false)
+# 启用后会将生成的图片 URL 缓存到 KV 存储中，减少重复的 Browserless 调用
+CACHE_ENABLED=true
+
+# KV 存储类型 (deno/vercel/cloudflare)
+# - deno: 使用 Deno KV (需要 --unstable-kv 标志) ✅ 已实现
+# - vercel: 使用 Vercel KV (需要配置 Vercel KV 环境变量) 🚧 计划中
+# - cloudflare: 使用 Cloudflare KV (需要配置 Cloudflare Workers KV) 🚧 计划中
+# 注意：vercel 和 cloudflare 适配器尚未实现，如需在这些平台部署请设置 CACHE_ENABLED=false
+CACHE_KV_TYPE=deno
+
+# ==========================================
 # 限制参数配置
 # ==========================================
 
