feat: 添加Authorization token验证功能
- 修复Deno Deploy部署错误：移除不支持的Deno.exit()调用
- 新增AUTH_TOKEN配置支持，用于云端部署的访问控制
- 实现validateAuthToken()函数，支持GET和POST请求的token验证
- GET请求：通过query参数?token=xxx进行验证
- POST请求：通过Authorization header进行验证（支持Bearer和Token前缀）
- 添加UNAUTHORIZED和MISSING_AUTH_TOKEN错误类型
- 更新.env.example文件，包含授权配置说明
- 保持向后兼容：不配置AUTH_TOKEN时跳过验证

--- a/.env.example
+++ b/.env.example
@@ -86,6 +86,13 @@ ALLOWED_DOMAINS=
 # 阻止的 SVG 来源域名 (逗号分隔)
 BLOCKED_DOMAINS=localhost,127.0.0.1,0.0.0.0,10.0.0.0,192.168.0.0
 
+# 授权 Token (可选)
+# 如果设置，则所有请求都需要提供此 token 进行验证
+# GET 请求: 通过 ?token=your-token 参数
+# POST 请求: 通过 Authorization: Bearer your-token 头部
+# 留空则不启用授权验证
+AUTH_TOKEN=
+
 # ==========================================
 # 服务器配置
 # ==========================================
